--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -13,9 +13,55 @@
       href="https://cdn.jsdelivr.net/npm/reset-css/reset.css"
     />
     <title>토스 기술 블로그, 토스 테크</title>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="index.js"></script>
+    <div id="app">
+      <header class="header">
+        <!-- 로고 -->
+        <img
+          src="public/logo.svg"
+          alt="Logo"
+          class="header__logo"
+          height="20px"
+        />
+        <nav class="header__nav">
+          <ul class="header__list">
+            <li class="header__item">
+              <a class="header__link" href="SLASH">SLASH</a>
+            </li>
+            <li class="header__item">
+              <a class="header__link" href="simplicity">SIMPLICITY</a>
+            </li>
+            <li class="header__item">
+              <button class="header__button header__button--subscribe">
+                구독하기
+              </button>
+            </li>
+            <li class="header__item">
+              <button class="header__button header__button--hire">
+                채용 바로가기
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="banner">
+          <img
+            src="public/toss-tech-banner2_.webp"
+            alt="banner"
+            class="banner__img"
+            height="20px"
+          />
+        </div>
+
+        <section class="posts"></section>
+
+        <aside class="sidebar"></aside>
+      </main>
+      <footer></footer>
+    </div>
+    <script type="module" src="src/index.js"></script>
   </body>
 </html>
