chore: src를 루트로 설정하고 파일 경로 수정

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css/reset.css"
     />
     <title>토스 기술 블로그, 토스 테크</title>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script type="module" src="src/index.js"></script>
   </head>
   <body>
@@ -44,7 +44,7 @@
       <main class="main">
         <div class="main__banner">
           <img
-            src="public/toss-tech-banner2_.webp"
+            src="/toss-tech-banner2_.webp"
             alt="main__banner"
             class="main__banner__img"
           />
