chore: 레이아웃, 크기 조정

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="post__img-wrapper">
                   <img
-                    src="https://static.toss.im/career-resource/0813_%ED%85%8C%ED%81%AC%EB%B8%94%EB%A1%9C%EA%B7%B8_%EC%8D%B8%EB%84%A4%EC%9D%BC2.png"
+                    src="https://static.toss.im/illusts-content/0726-tech-cover.png"
                     alt="Post Image"
                     class="post__img"
                   />
