feat: footer 추가

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,14 @@
           </aside>
         </div>
       </main>
-      <footer></footer>
+      <footer class="footer">
+        <div class="footer__links">
+          <a href="#" class="footer__link">홈페이지</a>
+          <a href="#" class="footer__link">회사소개</a>
+          <a href="#" class="footer__link">채용</a>
+          <a href="#" class="footer__link">고객센터</a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
