fix: post-view 스타일 적용되도록 수정

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           />
         </div>
         <div class="main__contents">
-          <post-view></post-view>
+          <post-view class="main__posts"></post-view>
           <aside class="main__sidebar">
             <div class="sidebar__section sidebar__popular-posts">
               <h3 class="sidebar__title">인기있는 글</h3>
