feat: 블로그 메인 custom element 적용

--- a/src/index.html
+++ b/src/index.html
@@ -18,92 +18,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
-        <a href="/" class="header__logo-link">
-          <img src="/logo.svg" alt="Logo" class="header__logo" />
-        </a>
-        <ul class="header__nav">
-          <li class="header__item">
-            <a class="header__link" href="SLASH">SLASH</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="simplicity">SIMPLICITY</a>
-          </li>
-          <li class="header__item">
-            <button class="header__button header__button--subscribe">
-              구독하기
-            </button>
-          </li>
-          <li class="header__item">
-            <button class="header__button header__button--hire">
-              채용 바로가기
-            </button>
-          </li>
-        </ul>
-      </header>
-      <main class="main">
-        <div class="main__banner">
-          <img
-            src="/toss-tech-banner2_.webp"
-            alt="main__banner"
-            class="main__banner__img"
-          />
-        </div>
-        <div class="main__contents">
-          <post-view class="main__posts"></post-view>
-          <aside class="main__sidebar">
-            <div class="sidebar__section sidebar__popular-posts">
-              <h3 class="sidebar__title">인기있는 글</h3>
-              <ul class="sidebar__list">
-                <li class="sidebar__item">
-                  <a href="#">
-                    <span class="sidebar__item-title"
-                      >Node.js 라이브러리 배포 파이프라인에 플러그인 시스템
-                      도입기</span
-                    >
-                    <p class="sidebar__author">장지훈</p>
-                  </a>
-                </li>
-                <li class="sidebar__item">
-                  <a href="#">
-                    <span class="sidebar__item-title"
-                      >레거시 제품을 버리고 CS 효율 높이기</span
-                    >
-                    <p class="sidebar__author">박성경</p>
-                  </a>
-                </li>
-                <li class="sidebar__item">
-                  <a href="#">
-                    <span class="sidebar__item-title"
-                      >토스가 꿈꾸는 React Native 기술의 미래</span
-                    >
-                    <p class="sidebar__author">박서진</p>
-                  </a>
-                </li>
-              </ul>
-            </div>
-
-            <div class="sidebar__section sidebar__tags">
-              <h3 class="sidebar__title">태그</h3>
-              <ul class="sidebar__tags-list">
-                <li class="sidebar__tag-item"><a href="#">Frontend</a></li>
-                <li class="sidebar__tag-item"><a href="#">Server</a></li>
-                <li class="sidebar__tag-item">
-                  <a href="#">Product Design</a>
-                </li>
-              </ul>
-            </div>
-          </aside>
-        </div>
-      </main>
-      <footer class="footer">
-        <div class="footer__links">
-          <a href="#" class="footer__link">홈페이지</a>
-          <a href="#" class="footer__link">회사소개</a>
-          <a href="#" class="footer__link">채용</a>
-          <a href="#" class="footer__link">고객센터</a>
-        </div>
-      </footer>
+      <blog-home></blog-home>
     </div>
   </body>
 </html>
