--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -14,10 +14,9 @@
     />
     <title>토스 기술 블로그, 토스 테크</title>
     <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.ts"></script>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
   </body>
 </html>
